test/depType4.slq

def zerovec(n:!â„•){
	return vector(n,0:ğ”¹);
}

def main(){
	x:=0:ğ”¹;
	v:=vector(measure(x),0:ğ”¹); // error
	y:=0:ğ”¹;
	w:=zerovec(measure(y)); // error
	return w;
}
